<resources>
    <string name="app_name">AndroidMaster</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="female">Mujer</string>
    <string name="male">Hombre</string>
    <string name="height">Altura</string>
    <string name="unit">cm</string>
    <string name="startUnit">120 cm</string>
    <string name="Weight">Peso</string>
    <string name="Age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Recalcular</string>

    <string name="error">Error</string>
    <string name="title_low_weight">Bajo peso</string>
    <string name="description_low_weight">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_normal_weight">Normal</string>
    <string name="description_normal_weight">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_high_weight">Sobrepeso</string>
    <string name="description_high_weight">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_overweight">Obesidad</string>
    <string name="description_overweight">Estás muy por encima de lo óptimo para tu peso y altura.</string>
    <string name="welcome">Bienvenido</string>
    <string name="categories">Categorías</string>
    <string name="business">Negocios</string>
    <string name="other">Otros</string>
    <string name="personal">Personal</string>
    <string name="tasks">Tareas</string>
    <string name="addTask">Añade la tarea</string>
    <string name="intelligence">Int</string>
    <string name="strength">Str</string>
    <string name="speed">Speed</string>
    <string name="power">Power</string>
    <string name="durability">Health</string>
    <string name="combat">Combat</string>
    <string name="noResults">No hay resultados</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="dark_mode_desc">Activa el modo oscuro para un cambio visual</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_desc">Conecta periféricos sin cables</string>
    <string name="vibrate_desc">Vibrar en las llamadas</string>
    <string name="volume">Volumen</string>

</resources>